--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,6 +31,6 @@ jobs:
 
     - name: Run tests
       run: npm test
-      run: npm run start:prod
+      run: npm start
       env:
         CI: true
