--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -36,7 +36,7 @@ jobs:
       run: npm test
       env:
         CI: true    
-    - name: Run Start
-      run:  npm start
-      env:
-        CI: true
+   # - name: Run Start
+   #  run:  npm start
+   #   env:
+   #     CI: true
