--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,6 +32,10 @@ jobs:
     - name: Install dependencies
       run: npm install
 
+    - name: Build app
+      run: npm run build
+      env:
+        CI: true
     - name: Run tests
       run: npm test
       env:
