Fix e2e tests and add to github workflow action

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -36,10 +36,14 @@ jobs:
       run: npm run build
       env:
         CI: true
-    - name: Run tests
+    - name: Run unit tests
       run: npm test
       env:
-        CI: true    
+        CI: true  
+    - name: Run e2e tests
+      run: npm e2e
+      env:
+        CI: true   
    # - name: Run Start
    #  run:  npm start
    #   env:
